{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 61,
  "lineage": "aae6dfce-db39-8415-0ac0-39de3407183c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:311104096523:loadbalancer/app/example-alb/6e77d5f857626867",
            "arn_suffix": "app/example-alb/6e77d5f857626867",
            "dns_name": "example-alb-1372343780.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:311104096523:loadbalancer/app/example-alb/6e77d5f857626867",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-alb",
            "security_groups": [
              "sg-0c4b97cb3342afea7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-042cc4d49b588b30b"
              },
              {
                "subnet_id": "subnet-0c691df9b16adc1b0"
              }
            ],
            "subnets": [
              "subnet-042cc4d49b588b30b",
              "subnet-0c691df9b16adc1b0"
            ],
            "tags": {
              "Name": "example-alb"
            },
            "tags_all": {
              "Name": "example-alb"
            },
            "vpc_id": "vpc-0171713b5df55f961",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.alb.aws_security_group.example-alb",
            "module.vpc.aws_subnet.example-a-public-subnet",
            "module.vpc.aws_subnet.example-c-public-subnet",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:security-group/sg-0c4b97cb3342afea7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4b97cb3342afea7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "example-alb",
            "name_prefix": "",
            "owner_id": "311104096523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-alb"
            },
            "tags_all": {
              "Name": "example-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:311104096523:targetgroup/example-tg/8b71348c21dcc52b",
            "arn_suffix": "targetgroup/example-tg/8b71348c21dcc52b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:311104096523:targetgroup/example-tg/8b71348c21dcc52b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "dependencies": [
            "module.alb.aws_lb.example",
            "module.alb.aws_security_group.example-alb",
            "module.vpc.aws_subnet.example-a-public-subnet",
            "module.vpc.aws_subnet.example-c-public-subnet",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-047cc1e3644e0ea4e",
            "domain": "vpc",
            "id": "eipalloc-064c1b35698cce986",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0c345d49a6e91fb07",
            "private_dns": "ip-10-0-0-32.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.32",
            "public_dns": "ec2-35-75-65-74.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.75.65.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-a-public"
            },
            "tags_all": {
              "Name": "nat-a-public"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bab6247b923b3f80",
            "domain": "vpc",
            "id": "eipalloc-085d4a75ffed73da3",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0a2a1276b070f3ea6",
            "private_dns": "ip-10-0-1-206.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.206",
            "public_dns": "ec2-175-41-203-28.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "175.41.203.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-c-public"
            },
            "tags_all": {
              "Name": "nat-c-public"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:internet-gateway/igw-0230e783e3e9a015f",
            "id": "igw-0230e783e3e9a015f",
            "owner_id": "311104096523",
            "tags": {
              "Name": "example-igw"
            },
            "tags_all": {
              "Name": "example-igw"
            },
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064c1b35698cce986",
            "connectivity_type": "public",
            "id": "nat-0df6c487cd04501ec",
            "network_interface_id": "eni-0c345d49a6e91fb07",
            "private_ip": "10.0.0.32",
            "public_ip": "35.75.65.74",
            "subnet_id": "subnet-042cc4d49b588b30b",
            "tags": {
              "Name": "example-a-public"
            },
            "tags_all": {
              "Name": "example-a-public"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat-a",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_subnet.example-a-public-subnet",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example-c-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085d4a75ffed73da3",
            "connectivity_type": "public",
            "id": "nat-0513781b9ebf3e66b",
            "network_interface_id": "eni-0a2a1276b070f3ea6",
            "private_ip": "10.0.1.206",
            "public_ip": "175.41.203.28",
            "subnet_id": "subnet-0c691df9b16adc1b0",
            "tags": {
              "Name": "example-c-public"
            },
            "tags_all": {
              "Name": "example-c-public"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat-c",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_subnet.example-c-public-subnet",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:route-table/rtb-0b376317d3684c06b",
            "id": "rtb-0b376317d3684c06b",
            "owner_id": "311104096523",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0df6c487cd04501ec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_a"
            },
            "tags_all": {
              "Name": "private_route_a"
            },
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.example-a-public",
            "module.vpc.aws_subnet.example-a-public-subnet",
            "module.vpc.aws_vpc.example",
            "module.vpc.aws_eip.nat-a",
            "module.vpc.aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:route-table/rtb-002ca1c7968740bcd",
            "id": "rtb-002ca1c7968740bcd",
            "owner_id": "311104096523",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0513781b9ebf3e66b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_c"
            },
            "tags_all": {
              "Name": "private_route_c"
            },
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat-c",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_nat_gateway.example-c-public",
            "module.vpc.aws_subnet.example-c-public-subnet",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:route-table/rtb-070cf64e7f4a3c0ed",
            "id": "rtb-070cf64e7f4a3c0ed",
            "owner_id": "311104096523",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0230e783e3e9a015f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017704d221a892ae2",
            "route_table_id": "rtb-0b376317d3684c06b",
            "subnet_id": "subnet-000ad0e8cb612c0c3"
          },
          "dependencies": [
            "module.vpc.aws_subnet.example-a-public-subnet",
            "module.vpc.aws_vpc.example",
            "module.vpc.aws_eip.nat-a",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_nat_gateway.example-a-public",
            "module.vpc.aws_route_table.private_route_a",
            "module.vpc.aws_subnet.example-a-private-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0000e4d0928d70d84",
            "route_table_id": "rtb-002ca1c7968740bcd",
            "subnet_id": "subnet-0c5c51cf85d54252b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat-c",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_nat_gateway.example-c-public",
            "module.vpc.aws_route_table.private_route_c",
            "module.vpc.aws_subnet.example-c-private-subnet",
            "module.vpc.aws_subnet.example-c-public-subnet",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d06c46ae1f38eca",
            "route_table_id": "rtb-070cf64e7f4a3c0ed",
            "subnet_id": "subnet-042cc4d49b588b30b"
          },
          "dependencies": [
            "module.vpc.aws_subnet.example-a-public-subnet",
            "module.vpc.aws_vpc.example",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_route_table.public_route"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0120eed97e8e72c3a",
            "route_table_id": "rtb-070cf64e7f4a3c0ed",
            "subnet_id": "subnet-0c691df9b16adc1b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.example-c-public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example-a-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:subnet/subnet-000ad0e8cb612c0c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-000ad0e8cb612c0c3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311104096523",
            "tags": {
              "Name": "example-a-private-subnet"
            },
            "tags_all": {
              "Name": "example-a-private-subnet"
            },
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example-a-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:subnet/subnet-042cc4d49b588b30b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-042cc4d49b588b30b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311104096523",
            "tags": {
              "Name": "example-a-public-subnet"
            },
            "tags_all": {
              "Name": "example-a-public-subnet"
            },
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example-c-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:subnet/subnet-0c5c51cf85d54252b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c5c51cf85d54252b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311104096523",
            "tags": {
              "Name": "example-c-private-subnet"
            },
            "tags_all": {
              "Name": "example-c-private-subnet"
            },
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example-c-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:subnet/subnet-0c691df9b16adc1b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c691df9b16adc1b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311104096523",
            "tags": {
              "Name": "example-c-public-subnet"
            },
            "tags_all": {
              "Name": "example-c-public-subnet"
            },
            "vpc_id": "vpc-0171713b5df55f961"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:311104096523:vpc/vpc-0171713b5df55f961",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a2b5429ab64c452",
            "default_route_table_id": "rtb-0034504635f6784d9",
            "default_security_group_id": "sg-0f2e9f62d4af30308",
            "dhcp_options_id": "dopt-07abb460",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0171713b5df55f961",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0034504635f6784d9",
            "owner_id": "311104096523",
            "tags": {
              "Name": "example-vpc"
            },
            "tags_all": {
              "Name": "example-vpc"
            }
          }
        }
      ]
    }
  ]
}